--- a/html/kpis.html
+++ b/html/kpis.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>驾驶舱-KPI</title>
-    <link rel="shortcut icon" href="../images/favicon.ico?1"/>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
     <script src="../libs/flexible.js"></script>
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
     <link rel="stylesheet" href="../css/LArea.css">
     <link rel="stylesheet" type="text/css" href="../css/service.css">
     <link rel="stylesheet" type="text/css" href="../css/kpis.css">
+    <script src="../libs/jquery-3.1.1.min.js"></script>
+    <script src="../js/common/config.js"></script>
+    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script>
+    <script src="../libs/LArea.js"></script>
+    <script src="../libs/echarts.min.js"></script>
+    <script src='../js/kpis/kpiOption.js'></script>
 </head>
 <body>
     <div class="box">
@@ -34,28 +39,33 @@
             </div>
         </section>
 
+        <!-- 城市概览-->
+        <section class="section-box">
+            <div class="wrap city-overview">
+                <div class="cont-title">城市概览 - <span class="cityName"></span></div>
+                <div class="overview-box">
+                    <div class="overview-line">
+                        <div> <p class="openTime"></p> <p>开城日期</p> </div>
+                        <div> <p class="totleUser"></p> <p>累计注册用户</p> </div>
+                        <div> <p class="validUser"></p> <p>可用车用户</p> </div>
+                    </div>
+                    <div class="overview-line">
+                        <div> <p class="carOnline"></p> <p>运营车辆</p> </div>
+                        <div> <p class="siteRange"></p> <p>场站规模</p> </div>
+                        <div> <p class="orderAvg"></p> <p>车均单</p> </div>
+                    </div>
+                    <div class="overview-line">
+                        <div> <p class="orderNum"></p> <p>订单量</p> </div>
+                        <div> <p class="incomeAvg"></p> <p>车均收现</p> </div>
+                        <div> <p class="dauUsers"></p> <p>DAU人数</p> </div>
+                    </div>
+                    <div id="detailBtn" class="overview-btn">城市详情</div>
+                </div>
+            </div>
+        </section>
+
 
         <div id="forOverviewKPI">
-            <!-- 城市概览-->
-            <section class="section-box">
-                <div class="wrap city-overview">
-                    <div class="cont-title">城市概览 - <span class="cityName"></span></div>
-                    <div class="overview-box">
-                        <div class="overview-line">
-                            <div> <p class="openTime"></p> <p>开城日期</p> </div>
-                            <div> <p class="totleUser"></p> <p>累计注册用户</p> </div>
-                            <div> <p class="validUser"></p> <p>可用车用户</p> </div>
-                        </div>
-                        <div class="overview-line">
-                            <div> <p class="carOnline"></p> <p>运营车辆</p> </div>
-                            <div> <p class="siteRange"></p> <p>场站规模</p> </div>
-                            <div> <p class="orderAvg"></p> <p>车均单</p> </div>
-                        </div>
-                        <div class="overview-btn">城市详情</div>
-                    </div>
-                </div>
-            </section>
-
             <!-- 运营车辆车均单 -->
             <section class="section-box">
                 <div class="wrap kpi-odAvg">
@@ -150,7 +160,7 @@
 
         <div id="forCityDetailKPI" style="display: none">
             <!-- 城市概览-->
-            <section class="section-box" section-id="8">
+            <!-- <section class="section-box" section-id="8">
                 <div class="wrap city-overview">
                     <div class="cont-title">城市概览 - <span class="cityName"></span>
                         <div class="sub-title">
@@ -169,7 +179,7 @@
                         <p class="responsiblePerson"></p>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- 城市进度图 -->
             <section class="section-box" section-id="9">
@@ -321,15 +331,6 @@
             </section>
         </div>
     </div>
-    <script src="../libs/jquery-3.1.1.min.js"></script>
-    <script src="../js/common/config.js"></script>
-    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script> <!-- 需要添加中文资源包-见service.js -->
-    <script src="../libs/LArea.js"></script>
-    <script src="../libs/echarts.min.js"></script>
-    <script src="../js/common/common.js"></script>
-    <script src="../js/common/service.js"></script>
-    <script type="text/javascript" src='../js/kpis/kpiOption.js'></script>
-    <script type="text/javascript" src='../js/kpis/kpis.js'></script>
-    <script type="text/javascript" src='../js/common/biMonitor.js'></script>
+    <script src='../js/common/biMonitor.js'></script>
 </body>
 </html>
