--- a/html/site.html
+++ b/html/site.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>驾驶舱-网点</title>
-    <link rel="shortcut icon" href="../images/favicon.ico?1"/>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
     <script src="../libs/flexible.js"></script>
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
     <link rel="stylesheet" href="../css/LArea.css">
     <link rel="stylesheet" type="text/css" href="../css/service.css">
     <link rel="stylesheet" type="text/css" href="../css/site.css">
+    <script src="../libs/jquery-3.1.1.min.js"></script>
+    <script src="../js/common/config.js"></script>
+    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script>
+    <script src="../libs/LArea.js"></script>
+    <script src="../libs/echarts.min.js"></script>
+    <script src="../js/site/siteOption.js"></script>
 </head>
 <body>
     <div class="box">
@@ -29,7 +34,7 @@
 
         <!-- 网点概况 -->
         <section class="section-box" section-id="34">
-            <div class="wrap site">
+            <div class="wrap site clearTopGap">
                 <div class="cont-title">网点概况</div>
                 <div class="headLine">
                     <p>指标名称</p>
@@ -233,15 +238,6 @@
             </div>
         </section>
     </div>
-    <script src="../libs/jquery-3.1.1.min.js"></script>
-    <script src="../js/common/config.js"></script>
-    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script> <!-- 需要添加中文资源包-见service.js -->
-    <script src="../libs/LArea.js"></script>
-    <script src="../libs/echarts.min.js"></script>
-    <script src="../js/common/common.js"></script>
-    <script src="../js/common/service.js"></script>
-    <script src="../js/site/siteOption.js"></script>
-    <script type="text/javascript" src='../js/site/site.js'></script>
-    <script type="text/javascript" src='../js/common/biMonitor.js'></script>
+    <script src='../js/common/biMonitor.js'></script>
 </body>
 </html>
