--- a/html/watch.html
+++ b/html/watch.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>驾驶舱-实时监控</title>
-    <link rel="shortcut icon" href="../images/favicon.ico"/>
     <meta name="flexible" content="initial-dpr=2,maximum-dpr=3,user-scalable=no" />
     <script src="../libs/flexible.js"></script>
     <link rel="stylesheet" href="../css/mobiscroll.custom-2.5.2.min_my.css"/>
     <link rel="stylesheet" href="../css/LArea.css">
     <link rel="stylesheet" type="text/css" href="../css/service.css">
     <link rel="stylesheet" type="text/css" href="../css/watch.css">
+    <script src="../libs/jquery-3.1.1.min.js"></script>
+    <script src="../js/common/config.js"></script>
+    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script>
+    <script src="../libs/LArea.js"></script>
+    <script src="../libs/echarts.min.js"></script>
+    <script src="../js/watch/watchOption.js"></script>
 </head>
 <body>
     <div class="box">
@@ -28,7 +33,7 @@
 
         <!-- 实时收现 -->
         <section class="section-box">
-            <div class="wrap income-chart">
+            <div class="wrap income-chart clearTopGap-watch">
                 <div class="flag-title">实时收现</div>
                 <div class="bulge-datePicker">
                     <div class="singleDatePicker">
@@ -267,15 +272,6 @@
             </div>
         </section>
     </div>
-    <script src="../libs/jquery-3.1.1.min.js"></script>
-    <script src="../js/common/config.js"></script>
-    <script src="../libs/mobiscroll.custom-2.5.2.min.js"></script> <!-- 需要添加中文资源包-见service.js -->
-    <script src="../libs/LArea.js"></script>
-    <script src="../libs/echarts.min.js"></script>
-    <script src="../js/common/common.js"></script>
-    <script src="../js/common/service.js"></script>
-    <script src="../js/watch/watchOption.js"></script>
-    <script type="text/javascript" src='../js/watch/watch.js'></script>
-    <script type="text/javascript" src='../js/common/biMonitor.js'></script>
+    <script src='../js/common/biMonitor.js'></script>
 </body>
 </html>
